apps/medium-place/trilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      volumes:
      - name: data-trilium
        persistentVolumeClaim:
          claimName: data-trilium
      containers:
      - name: trilium
        image: zadam/trilium:0.51.2
        volumeMounts:
          - mountPath: "/home/node/trilium-data"
            name: data-trilium
