apps/medium-place/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
spec:
  selector:
    app: trilium
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
