apps/medium-place/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  tls:
    - hosts:
        - trilium.medium.place
      secretName: trilium.medium.place-tls
  rules:
    - host: trilium.medium.place
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: trilium
                port:
                  number: 8080
